packages/next-swc/crates/next-custom-transforms/tests/errors/next-ssg/server-side-after-static-props/input.js
const getStaticProps = async () => {}
export { a as getServerSideProps }
